src/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");

/* prettier-ignore */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
/* prettier-ignore */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
  line-height: 1;
  background-color: #ffeeed;
  animation: bgColor 25s infinite linear;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  font-family: "Rubik", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

span {
  font-weight: 500;
  margin: 0.5rem;
  font-size: 0.8rem;
  text-align: center;
  font-style: italic;
}

span.project-title {
  font-style: normal;
  margin: 0 7px 0 0;
}

.contact-link:hover {
  text-decoration: none;
}

svg {
  width: 35px;
  height: 35px;
  stroke: black;
  transition: stroke 0.3s ease, fill 0.3s ease;
}

svg:hover {
  stroke: rgb(130, 21, 37);
}

#github-icon:hover {
  fill: rgb(130, 21, 37);
}

.wrapper {
  display: flex;
  flex-flow: column;
}

.left-col h1 {
  font-size: 2.8rem;
  font-weight: 500;
}

.left-col-header {
  display: flex;
  flex-flow: row wrap;

  margin: 0.5rem 0 0 0.5rem;
  row-gap: 0.5rem;
}

.contact {
  width: 100%;
  display: flex;
  column-gap: 0.3rem;
}

#projects {
  margin: 1.5rem;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  row-gap: 2rem;
}

.project-container {
  width: 100%;
  border-radius: 8px;
  display: flex;
  align-items: flex-start;
  flex-flow: column;
}

.project-title {
  font-size: 1.6rem;
  padding: 1rem 0rem 0.5rem 0rem;
  text-align: center;
  font-weight: 500;
  letter-spacing: 1;
  color: black;
}

.project-description {
  font-family: "Zen Old Mincho", serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 150%;
  padding: 0.5rem 0;
}

.project-link {
  width: 100%;
}

.project-link img {
  background-position: center;
  object-fit: cover;
  object-position: 50% 1%;
  width: 100%;
  height: 300px;
  border-radius: 12px;
  animation: glow-reverse 250ms ease-in-out forwards;
}

.project-link img:hover {
  animation: glow 250ms ease-in-out forwards;
}

a {
  text-decoration: none;
  font-weight: bold;
  color: #821525;
  position: relative;
  transition: color 0.1s ease-in-out;
}

a:hover {
  text-decoration: underline;
}

.links-row {
  display: flex;
  margin: 0.3rem 0;
}

.links-row-item {
  font-size: 1.1rem;
}

.links-row-item a {
  font-weight: 600;
  color: #171a7d;
  transition: color 0.2s ease-out;
}

.links-row-item a:hover {
  text-decoration: none;
  color: #17517d;
}

.links-row-item:not(:last-child)::after {
  content: "\00a0\00a0|";
}

.links-row-item:not(:first-child) {
  padding-left: 8px;
}

@keyframes bgColor {
  0% {
    background: #ffefee;
  }
  14% {
    background: #feffed;
  }
  28% {
    background: #f6ffed;
  }
  42% {
    background: #edfff0;
  }
  56% {
    background: #edfffe;
  }
  70% {
    background: #edefff;
  }
  84% {
    background: #f9edff;
  }
  100% {
    background: #ffedf3;
  }
}

@keyframes glow {
  0% {
    box-shadow: 1px 1px 10px 1px rgba(162, 154, 154, 0.75);
  }
  100% {
    box-shadow: 0px 0px 10px 2px rgba(118, 113, 113, 0.75);
  }
}

@keyframes glow-reverse {
  0% {
    box-shadow: 0px 0px 10px 2px rgba(118, 113, 113, 0.75);
  }
  100% {
    box-shadow: 1px 1px 10px 1px rgba(162, 154, 154, 0.75);
  }
}

@media (min-width: 576px) {
  .wrapper {
    height: 100%;
    width: 100vw;
    display: flex;
    flex-flow: row;
    column-gap: 2rem;
  }

  .left-col {
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 200px;
    padding: 0.6rem 0 0 0.6rem;
  }

  .right-col {
    flex: 1;
    padding: 1rem;
    margin-left: 200px;
  }

  .header {
    font-size: 4rem;
  }

  #projects {
    padding: 1rem;
    display: grid;
    /* grid-template-columns: repeat(auto-fill, minmax(400px, 500px)); */
    gap: 2rem;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
    padding: 1.5rem;
  }

  .project-container {
    min-width: 400px;
    max-width: 520px;
  }
  .project-title {
    font-size: 1.3rem;
  }
  .project-description {
    font-size: 0.95rem;
    padding-top: 0.5rem;
    line-height: 170%;
  }
  .links-row-item {
    font-size: 0.9rem;
  }
}

@media (min-width: 830px) {
  #projects {
    justify-items: center;
  }
}

@media (min-width: 1400px) {
  .header {
    font-size: 5rem;
  }
}

